# rasp_leds

./: README.md  build  crates.js  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: rustdoc.yaml
backend/: Cargo.toml  README.md  notes.txt  pi@192.168.0.7
backend/src/: main.rs
backend/src/led_driver/: error.rs  mod.rs  runner.rs
backend/src/patterns/: animations.rs  common.rs  meteor.rs  mod.rs  moving_dot.rs  rainbow.rs  random.rs  static.rs  strobe.rs  timer.rs
frontend/: README.md  package-lock.json  package.json  pubspec.yaml
frontend/android/app/: build.gradle
frontend/lib/: main.dart
frontend/lib/patterns/: common.dart  meteor.dart  rainbow.dart  (+1 more)
frontend/src/: App.js
frontend/web/: index.html
hardware/: README.md
hardware/raspberrypi-led-hat/: fp-info-cache  fp-lib-table  raspberrypi-led-hat-2.kicad_pcb  raspberrypi-led-hat-2.kicad_pcb-bak  raspberrypi-led-hat-2.sch  raspberrypi-led-hat-cache.lib  raspberrypi-led-hat-eagle-import.lib  raspberrypi-led-hat-rescue.lib  raspberrypi-led-hat.kicad_pcb  raspberrypi-led-hat.kicad_pcb-bak  raspberrypi-led-hat.pro  raspberrypi-led-hat.sch  raspberrypi-led-hat.sch-bak  sym-lib-table
rasp_leds/: all.html  constant.BRIGHTNESS.html  constant.COUNT.html  constant.PIN.html  fn.main.html  fn.pattern.html  fn.rocket_route_fn_pattern.html  index.html  sidebar-items.js  static.static_rocket_route_info_for_pattern.html  type.StateRunner.html
rasp_leds/led_driver/: index.html  sidebar-items.js
rasp_leds/patterns/: index.html  sidebar-items.js
src/rasp_leds/: main.rs.html
(+107 files in other folders)
