[package]
name = "rasp_leds"
version = "0.1.0"
edition = "2018"

[dependencies]
rs_ws281x = "0.4.2"
rand = "0.8.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rocket = "0.4.10"
rocket_contrib = {version = "0.4.10", default-features = false, features = ["json", "serve"]}
chrono = "0.4.19"
enum_dispatch = "0.3.7"